chore: update moonraker.conf
Updating moonraker.conf according to
https://github.com/Arksine/moonraker/issues/410

Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
+++ b/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
@@ -9,7 +9,7 @@ max_upload_size: 1024
 [file_manager]
 config_path: ~/klipper_config
 log_path: ~/klipper_logs
-# post processing for object cancel. Not recommended for low resource SBCs such as a Pi Zero. Default False 
+# post processing for object cancel. Not recommended for low resource SBCs such as a Pi Zero. Default False
 enable_object_processing: False
 
 [authorization]
@@ -35,9 +35,10 @@ trusted_clients:
 
 # this enables moonraker's update manager
 [update_manager]
-refresh_interval: 168 
+refresh_interval: 168
 
 [update_manager mainsail]
 type: web
+channel: stable
 repo: mainsail-crew/mainsail
 path: ~/mainsail
