--- a/src/modules/mainsail/filesystem/root/etc/nginx/conf.d/upstreams.conf
+++ b/src/modules/mainsail/filesystem/root/etc/nginx/conf.d/upstreams.conf
@@ -22,3 +22,8 @@ upstream mjpgstreamer4 {
     ip_hash;
     server 127.0.0.1:8083;
 }
+
+upstream configurator {
+    ip_hash;
+    server 127.0.0.1:3000;
+}
