--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.6"
 services:
     custompios:
         image: guysoft/custompios:devel
-        container_name: mainsailos-build
+        container_name: ratos-build
         tty: true
         restart: always
         privileged: true
