Moonraker: use RatOS include

--- a/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
+++ b/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
@@ -1,17 +1,8 @@
-[server]
-host: 0.0.0.0
-port: 7125
-# Verbose logging used for debugging . Default False.
-enable_debug_logging: False
-# The maximum size allowed for a file upload (in MiB).  Default 1024 MiB
-max_upload_size: 1024
+# Load the RatOS moonraker defaults
+[include config/moonraker.conf]
 
-[file_manager]
-config_path: ~/klipper_config
-log_path: ~/klipper_logs
-# post processing for object cancel. Not recommended for low resource SBCs such as a Pi Zero. Default False 
-enable_object_processing: False
-
+# If you use a "special" ip range in your local network, 
+# you can specify it under trusted_clients here.
 [authorization]
 cors_domains:
     *://app.fluidd.xyz
@@ -28,38 +19,3 @@ trusted_clients:
     192.168.0.0/16
     FE80::/10
     ::1/128
-
-# enables partial support of Octoprint API
-[octoprint_compat]
-
-# enables moonraker to track and store print history.
-[history]
-
-# this enables moonraker's update manager
-[update_manager]
-refresh_interval: 168 
-
-[update_manager client RatOS]
-type: git_repo
-path: /home/pi/klipper_config/config
-origin: https://github.com/Rat-OS/RatOS-configuration.git
-install_script: /home/pi/klipper_config/config/scripts/ratos-install.sh
-
-[update_manager client RatOSTheme]
-type: git_repo
-path: /home/pi/klipper_config/.theme
-origin: https://github.com/Rat-OS/RatOS-theme.git
-is_system_service: False
-
-[update_manager mainsail]
-type: web
-repo: mainsail-crew/mainsail
-path: ~/mainsail
-
-[update_manager KlipperScreen]
-type: git_repo
-path: ~/KlipperScreen
-origin: https://github.com/jordanruthe/KlipperScreen.git
-env: ~/.KlipperScreen-env/bin/python
-requirements: scripts/KlipperScreen-requirements.txt
-install_script: scripts/KlipperScreen-install.sh
