--- a/src/modules/klipper/config
+++ b/src/modules/klipper/config
@@ -4,7 +4,7 @@
 [ -n "$KLIPPER_REPO_SHIP" ] || KLIPPER_REPO_SHIP=https://github.com/Klipper3d/klipper.git
 [ -n "$KLIPPER_REPO_BRANCH" ] || KLIPPER_REPO_BRANCH=master
 [ -n "$KLIPPER_DEPS" ] || KLIPPER_DEPS="wget git gpiod \
-virtualenv python-dev python-matplotlib \
+virtualenv python3-dev python3-matplotlib \
 libffi-dev build-essential \
 libncurses-dev libusb-dev \
 avrdude gcc-avr binutils-avr avr-libc \
