--- a/.github/workflows/BuildRaspiOS.yml
+++ b/.github/workflows/BuildRaspiOS.yml
@@ -2,19 +2,21 @@ name: Build MainsailOS - Raspberry Pi OS buster
 on:
   push:
     branches:
-      - '**'
+      - "**"
     paths:
-    - 'src/**'
-    - 'emulation/**'
-    - '.github/workflows/BuildRaspiOS.yml'
+      - "src/**"
+      - "emulation/**"
+      - ".github/workflows/BuildRaspiOS.yml"
     tags-ignore:
-      - '**'
+      - "**"
   pull_request:
-    types: [ opened, edited, reopened, synchronize ]
+    types: [opened, edited, reopened, synchronize]
     paths:
-    - 'src/**'
-    - 'emulation/**'
-    - '.github/workflows/BuildRaspiOS.yml'
+      - "src/**"
+      - "emulation/**"
+      - ".github/workflows/BuildRaspiOS.yml"
+
+  workflow_dispatch:
 
 jobs:
   raspiosbuild:
@@ -27,7 +29,7 @@ jobs:
       - name: Checkout CustomPiOS
         uses: actions/checkout@v2
         with:
-          repository: 'guysoft/CustomPiOS'
+          repository: "guysoft/CustomPiOS"
           path: CustomPiOS
 
       - name: Checkout MainsailOS Project
