refactor(klipper): refactor klipper and is-pre-install module
Style: add new header

Style: refactored to match shellcheck requirements.

Improved:
Inherited error trap.
Set fallback lang to C.
Set DEBIAN_FRONTEND to noninteractive if not noninteractive.

Replaced apt install with check_install_pkgs

Fix: Use correct network-online.target instead network.target

Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/klipper/config
+++ b/src/modules/klipper/config
@@ -1,3 +1,5 @@
+#!/bin/bash
+# shellcheck disable=all
 [ -n "$KLIPPER_SRC_DIR" ] || KLIPPER_SRC_DIR=/home/${BASE_USER}/klipper
 [ -n "$KLIPPER_PYTHON_DIR" ] || KLIPPER_PYTHON_DIR=/home/${BASE_USER}/klippy-env
 
