--- a/src/modules/sonar/config
+++ b/src/modules/sonar/config
@@ -10,9 +10,12 @@
 # shellcheck disable=all
 
 # Sonar
-[ -n "$SONAR_SONAR_REPO_SHIP" ] || SONAR_SONAR_REPO_SHIP=https://github.com/mainsail-crew/sonar.git
-[ -n "$SONAR_SONAR_REPO_BRANCH" ] || SONAR_SONAR_REPO_BRANCH=main
-[ -n "$SONAR_SONAR_DEPS" ] || SONAR_SONAR_DEPS="git crudini iputils-ping"
-[ -n "$SONAR_SONAR_DEFAULT_CONF" ] || SONAR_SONAR_DEFAULT_CONF="mainsail_default.conf"
-# Add Sonar to moonraker.conf (update manager) bool (1:yes / 0:no)
-[ -n "$SONAR_SONAR_ADD_SONAR_MOONRAKER" ] || SONAR_SONAR_ADD_SONAR_MOONRAKER=1
+[ -n "$SONAR_REPO_SHIP" ] || SONAR_REPO_SHIP=https://github.com/mainsail-crew/sonar.git
+[ -n "$SONAR_REPO_BRANCH" ] || SONAR_REPO_BRANCH=main
+[ -n "$SONAR_DEPS" ] || SONAR_DEPS="git crudini iputils-ping"
+[ -n "$SONAR_DEFAULT_CONF_DIR" ] || SONAR_DEFAULT_CONF_DIR="/home/${BASE_USER}/klipper_config"
+[ -n "$SONAR_DEFAULT_CONF" ] || SONAR_DEFAULT_CONF="mainsail_default.conf"
+# Add Sonar to moonraker.conf (update_manager) bool (1:yes / 0:no)
+[ -n "$SONAR_ADD_SONAR_MOONRAKER" ] || SONAR_ADD_SONAR_MOONRAKER=1
+# Path to moonraker.conf (must be set if add to update_manager)
+[ -n "$SONAR_MOONRAKER_CONF" ] || SONAR_MOONRAKER_CONF="${SONAR_DEFAULT_CONF_DIR}/moonraker.conf"
