--- a/src/modules/mainsail/filesystem/home/pi/klipper_config/mainsail.cfg
+++ b/src/modules/mainsail/filesystem/home/pi/klipper_config/mainsail.cfg
@@ -4,7 +4,7 @@
 #
 # This file may be distributed under the terms of the GNU GPLv3 license
 #
-# Version 1.8
+# Version 1.9
 
 # add [include mainsail.cfg] to your printer.cfg to include it to your printer.cfg
 # modify x_park, y_park, z_park_delta and extrude value at the macro _TOOLHEAD_PARK_PAUSE_CANCEL if needed
@@ -12,7 +12,7 @@
 # use variable_park: False at CANCEL_PRINT to disallow the parking move
 
 [virtual_sdcard]
-path: /home/pi/gcode_files
+path: ~/gcode_files
 
 [pause_resume]
 
