Moonraker: add local IPV6 range

--- a/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
+++ b/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
@@ -1,7 +1,7 @@
 # Load the RatOS moonraker defaults
 [include config/moonraker.conf]
 
-# If you use a "special" ip range in your local network, 
+# If you use a non standard ip range in your local network, 
 # you can specify it under trusted_clients here.
 [authorization]
 cors_domains:
@@ -19,3 +19,4 @@ trusted_clients:
     192.168.0.0/16
     FE80::/10
     ::1/128
+    FD00::/8
