--- a/src/modules/mainsail/filesystem/home/pi/klipper_config/mainsail.cfg
+++ b/src/modules/mainsail/filesystem/home/pi/klipper_config/mainsail.cfg
@@ -4,7 +4,7 @@
 #
 # This file may be distributed under the terms of the GNU GPLv3 license
 #
-# Version 1.9
+# Version 1.10
 
 # add [include mainsail.cfg] to your printer.cfg to include it to your printer.cfg
 # modify x_park, y_park, z_park_delta and extrude value at the macro _TOOLHEAD_PARK_PAUSE_CANCEL if needed
@@ -13,6 +13,10 @@
 
 [virtual_sdcard]
 path: ~/gcode_files
+on_error_gcode:
+  {% if error_message.startswith("Move exceeds maximum extrusion") %}
+    CANCEL_PRINT
+  {% endif %}
 
 [pause_resume]
 
