chore(crowsnest): update crowsnest module
Updates crowsnest module according to changes due
https://github.com/mainsail-crew/crowsnest/commit/6071c6fc769dbda8ab18aa16e46fdcba28d8288c

Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/crowsnest/config
+++ b/src/modules/crowsnest/config
@@ -22,7 +22,7 @@
 
 
 # ustreamer
-[ -n "$CROWSNEST_USTREAMER_DEPS" ] || CROWSNEST_USTREAMER_DEPS="git build-essential libevent-dev libjpeg8-dev \
+[ -n "$CROWSNEST_USTREAMER_DEPS" ] || CROWSNEST_USTREAMER_DEPS="git build-essential libevent-dev libjpeg-dev \
 libbsd-dev libraspberrypi-dev libgpiod-dev"
 [ -n "$CROWSNEST_USTREAMER_WITH_OMX" ] || CROWSNEST_USTREAMER_WITH_OMX="y"
 [ -n "$CROWSNEST_USTREAMER_WITH_GPIO" ] || CROWSNEST_USTREAMER_WITH_GPIO="n"
