chore(crowsnest): update module to latest changes
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/crowsnest/config
+++ b/src/modules/crowsnest/config
@@ -1,5 +1,5 @@
 #!/bin/bash
-#### webcamd - A webcam Service for multiple Cams and Stream Services.
+#### crowsnest - A webcam Service for multiple Cams and Stream Services.
 ####
 #### Written by Stephan Wendel aka KwadFan <me@stephanwe.de>
 #### Copyright 2021
