chore: update branch with changes from develop
Squashed commit of the following:

commit 32e07a48499da6fb41c02c03d0922799124b2678
Author: Stephan Wendel <me@stephanwe.de>
Date:   Thu Jun 16 17:18:08 2022 +0200

    chore: update numpy version in is_req_preinstall

    For py 3.9 exist precompiled numpy package in versio 1.22.4

    Signed-off-by: Stephan Wendel <me@stephanwe.de>

commit 4a4bfbf27a1b3d2a42854eecbf8575c7b3b00faf
Author: Stephan Wendel <me@stephanwe.de>
Date:   Thu Jun 16 17:13:28 2022 +0200

    chore(build): update config file to latest changes

    Updates config file to latest changes in CustomPIOS

    Signed-off-by: Stephan Wendel <me@stephanwe.de>

commit c87d8d660348a96db6730fbac26372c67ec750ee
Author: Stephan Wendel <me@stephanwe.de>
Date:   Thu Jun 16 13:11:08 2022 +0200

    fix(klipper): fix libusb-1.0 error

    Signed-off-by: Stephan Wendel <me@stephanwe.de>

commit 24fb2fe661d4a9fbee1253670f440091efe4b0b3
Author: KwadFan <43513802+KwadFan@users.noreply.github.com>
Date:   Sun Jan 23 18:54:54 2022 +0100

    chore: updated download paths to bullseye (#85)

    Co-authored-by: Mikkel Schmidt <mikkel.schmidt@gmail.com>
    Co-authored-by: Alex Zellner <37265689+zellneralex@users.noreply.github.com>
    Co-authored-by: Stefan Dej <meteyou@gmail.com>

commit 4d034c81acd7fd099faf6a5e7e5c65a8de1ea7a8
Author: KwadFan <43513802+KwadFan@users.noreply.github.com>
Date:   Tue Jun 14 17:23:50 2022 +0200

    chore(crowsnest): update crowsnest module (#123)

    * chore(crowsnest): update crowsnest module

    Updates crowsnest module according to changes due
    https://github.com/mainsail-crew/crowsnest/commit/6071c6fc769dbda8ab18aa16e46fdcba28d8288c

    Signed-off-by: Stephan Wendel <me@stephanwe.de>

commit 0b0b0e0c7586fd592596606fbaaf45d2464c0f23
Author: KwadFan <43513802+KwadFan@users.noreply.github.com>
Date:   Sat Jun 11 18:32:17 2022 +0200

    chore(docs): fix urls, add includes (#122)

    * chore(docs): fix urls, add includes

    Signed-

--- a/.github/workflows/ReleaseRaspiOS.yml
+++ b/.github/workflows/ReleaseRaspiOS.yml
@@ -1,7 +1,7 @@
 name: Build and Release MainsailOS - Raspberry Pi OS buster
 on:
   release:
-    types: [ published ]
+    types: [published]
 
 jobs:
   raspiosbuild:
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout CustomPiOS
         uses: actions/checkout@v2
         with:
-          repository: 'guysoft/CustomPiOS'
+          repository: "guysoft/CustomPiOS"
           path: CustomPiOS
 
       - name: Checkout MainsailOS Project
@@ -25,7 +25,17 @@ jobs:
           submodules: true
 
       - name: Download Raspberry Pi OS Source Image
-        run: aria2c -d repository/src/image/ --seed-time=0 https://downloads.raspberrypi.org/raspios_oldstable_lite_armhf/images/raspios_oldstable_lite_armhf-2021-12-02/2021-12-02-raspios-buster-armhf-lite.zip.torrent
+        run: aria2c -d repository/src/image/ --seed-time=0 https://downloads.raspberrypi.org/raspios_lite_armhf_latest.torrent
+
+      - name: Comparing Checksums
+        run: |
+          cd repository/src/image
+          curl -JL https://downloads.raspberrypi.org/raspios_lite_armhf_latest.sha256 | awk '{print $1"  "$2}' | sha256sum -c
+
+      - name: Comparing Checksums
+        run: |
+          cd repository/src/image
+          curl -JL https://downloads.raspberrypi.org/raspios_lite_armhf_latest.sha256 | awk '{print $1"  "$2}' | sha256sum -c
 
       - name: Comparing Checksums
         run: |
