--- a/src/modules/mainsail/filesystem/home/pi/klipper_config/mainsail.cfg
+++ b/src/modules/mainsail/filesystem/home/pi/klipper_config/mainsail.cfg
@@ -4,7 +4,7 @@
 #
 # This file may be distributed under the terms of the GNU GPLv3 license
 #
-# Version 1.7
+# Version 1.11
 
 # add [include mainsail.cfg] to your printer.cfg to include it to your printer.cfg
 # modify x_park, y_park, z_park_delta and extrude value at the macro _TOOLHEAD_PARK_PAUSE_CANCEL if needed
@@ -12,7 +12,9 @@
 # use variable_park: False at CANCEL_PRINT to disallow the parking move
 
 [virtual_sdcard]
-path: /home/pi/gcode_files
+path: ~/gcode_files
+on_error_gcode:
+  CANCEL_PRINT
 
 [pause_resume]
 
@@ -28,6 +30,7 @@ gcode:
     _TOOLHEAD_PARK_PAUSE_CANCEL
   {% endif %}
   TURN_OFF_HEATERS
+  M106 S0
   CANCEL_PRINT_BASE
 
 [gcode_macro PAUSE]
@@ -56,7 +59,7 @@ gcode:
     {% if printer.gcode_move.absolute_extrude |lower == 'true' %} M82 {% endif %}
   {% else %}
     {action_respond_info("Extruder not hot enough")}
-  {% endif %}  
+  {% endif %}
   RESUME_BASE {get_params}
 
 [gcode_macro _TOOLHEAD_PARK_PAUSE_CANCEL]
