--- a/.editorconfig
+++ b/.editorconfig
@@ -11,5 +11,6 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[Makefile]
-indent_style = tab
+[*.{yml, yaml}]
+indent_style = space
+indent_size = 2
