--- a/src/config
+++ b/src/config
@@ -7,3 +7,7 @@ export BASE_IMAGE_ENLARGEROOT=2500
 export MODULES="base,pkgupgrade,mainsailos(network,piconfig,klipper,is_req_preinstall,moonraker,mainsail,crowsnest,sonar,password-for-sudo)"
 export BASE_RELEASE_COMPRESS=yes
 export BASE_IMAGE_RESIZEROOT=600
+
+## Disable Wifi service configuration
+export BASE_NETWORK_DISABLE_PWRSAVE=yes
+export BASE_NETWORK_PWRSAVE_TYPE=service
