feat: add python3-serial CanBoot dependency
Added CanBoot Dependency to Base Image.

Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/mainsailos/config
+++ b/src/modules/mainsailos/config
@@ -1,2 +1,4 @@
-# This file is intentionally left blank
-# Preparation for later use cases
+#!/bin/bash
+# shellcheck disable=all
+
+[ -n "$MAINSAILOS_DEPS" ] || MAINSAILOS_DEPS="python3-serial"
