refactor: refactores moonraker.conf
Add 'enable_auto_refresh: True' to moonraker.conf

Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
+++ b/src/modules/moonraker/filesystem/home/pi/klipper_config/moonraker.conf
@@ -41,6 +41,7 @@ subscriptions:
 # this enables moonraker's update manager
 [update_manager]
 refresh_interval: 168
+enable_auto_refresh: True
 
 [update_manager mainsail]
 type: web
