chore: rework ReleaseRaspiOS.yml workflow with source image cache
Signed-off-by: Stefan Dej <meteyou@gmail.com>

--- a/.github/workflows/ReleaseRaspiOS.yml
+++ b/.github/workflows/ReleaseRaspiOS.yml
@@ -3,18 +3,23 @@ on:
   release:
     types: [ published ]
 
+env:
+  DOWNLOAD_URL_CHECKSUM: "https://downloads.raspberrypi.org/raspios_lite_armhf_latest.sha256"
+  DOWNLOAD_URL_IMAGE: "https://downloads.raspberrypi.org/raspios_lite_armhf_latest.torrent"
+  FILENAME_CHECKSUM: "raspios_lite_armhf_latest.sha256"
+
 jobs:
   raspiosbuild:
     runs-on: ubuntu-latest
 
     steps:
       - name: Install Dependencies
-        run: sudo apt install coreutils p7zip-full qemu-user-static zip
+        run: sudo apt update; sudo apt install --yes coreutils p7zip-full qemu-user-static zip
 
       - name: Checkout CustomPiOS
         uses: actions/checkout@v2
         with:
-          repository: 'guysoft/CustomPiOS'
+          repository: "guysoft/CustomPiOS"
           path: CustomPiOS
 
       - name: Checkout MainsailOS Project
@@ -24,13 +29,30 @@ jobs:
           path: repository
           submodules: true
 
+      - name: Raspberry Pi OS Checksum
+        id: raspios-checksum
+        run: |
+          cd repository/src/image
+          wget -O $FILENAME_CHECKSUM $DOWNLOAD_URL_CHECKSUM
+          FILE_CONTENT=$(head -n 1 $FILENAME_CHECKSUM)
+          CHECKSUM=$(echo $FILE_CONTENT | cut -d' ' -f1)
+          echo "::set-output name=CHECKSUM::$CHECKSUM"
+
+      - name: Cache Raspberry Pi OS Source Image
+        id: cache-source-image
+        uses: actions/cache@v3
+        with:
+          path: repository/src/image/*.img.xz
+          key: ${{ runner.os }}-${{ steps.raspios-checksum.outputs.CHECKSUM }}
+
       - name: Download Raspberry Pi OS Source Image
-        run: aria2c -d repository/src/image/ --seed-time=0 https://downloads.raspberrypi.org/raspios_oldstable_lite_armhf_latest.torrent
+        if: steps.cache-source-image.outputs.cache-hit != 'true'
+        run: aria2c -d repository/src/image --seed-time=0 $DOWNLOAD_URL_IMAGE
 
       - name: Comparing Checksums
         run: |
           cd repository/src/image
-          curl -JL https://downloads.raspberrypi.org/raspios_oldstable_lite_armhf_latest.sha256 | awk '{print $1"  "$2}' | sha256sum -c
+          cat $FILENAME_CHECKSUM | awk '{print $1"  "$2}' | sha256sum -c
 
       - name: Update CustomPiOS Paths
         run: cd repository/src && ../../CustomPiOS/src/update-custompios-paths
