--- a/src/config
+++ b/src/config
@@ -4,6 +4,6 @@
 export DIST_NAME=MainsailOS
 export DIST_VERSION=0.7.0
 export BASE_IMAGE_ENLARGEROOT=2500
-export MODULES="base,pkgupgrade,mainsailos(network,piconfig,klipper,is_req_preinstall,moonraker,timelapse,mainsail,crowsnest,sonar,password-for-sudo),postrename"
+export MODULES="base,pkgupgrade,mainsailos(net,piconfig,klipper,is_req_preinstall,moonraker,timelapse,mainsail,crowsnest,sonar,password-for-sudo),postrename"
 export BASE_RELEASE_COMPRESS=yes
 export BASE_IMAGE_RESIZEROOT=600
