--- a/.github/workflows/BuildRaspiOS.yml
+++ b/.github/workflows/BuildRaspiOS.yml
@@ -2,7 +2,8 @@ name: Build MainsailOS - Raspberry Pi OS buster
 on:
   push:
     branches:
-      - "**"
+      - "master"
+      - "develop"
     paths:
       - "src/**"
       - "emulation/**"
