chore(build): refactor build dependend files (#154)
* refactor: refactor of raspberry config

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* fix: fix shellcheck errors

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* refactor: changed compression flags

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: remove obsolete trigger

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* chore: add trigger for config folder

Signed-off-by: Stephan Wendel <me@stephanwe.de>

* fix: fixes typo in Compressing Image

Signed-off-by: Stephan Wendel <me@stephanwe.de>

Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/.github/workflows/BuildImages.yml
+++ b/.github/workflows/BuildImages.yml
@@ -6,7 +6,7 @@ on:
       - "develop"
     paths:
       - "src/**"
-      - "emulation/**"
+      - "config/**"
       - ".github/workflows/BuildImages.yml"
     tags-ignore:
       - "**"
@@ -14,11 +14,10 @@ on:
     types: [opened, edited, reopened, synchronize]
     paths:
       - "src/**"
-      - "emulation/**"
+      - "config/**"
       - ".github/workflows/BuildImages.yml"
 
   workflow_dispatch:
-
 
 # Allow to stop obsolete workflows
 concurrency:
@@ -69,7 +68,10 @@ jobs:
 
       - name: Compressing Image
         shell: bash
-        run: xz -efkvz ${{ steps.copy-image.outputs.image }}.img
+        run: |
+          CPU_COUNT="$(nproc)"
+          echo -e "\e[32mUsing ${CPU_COUNT} Cores for compression...\e[0m"
+          xz -efkvz9T"${CPU_COUNT}" ${{ steps.copy-image.outputs.image }}.img
 
       - name: Calculating checksums
         shell: bash
