fix: fix syntax error in Line 1
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -6,8 +6,7 @@ on:
     paths:
       - "config/**"
       - "src/**"
-    paths-ignore:
-      - "src/version"
+      - "!src/version"
 
   pull_request:
     types: [opened, edited, reopened, synchronize]
@@ -16,8 +15,7 @@ on:
     paths:
       - "config/**"
       - "src/**"
-    paths-ignore:
-      - "src/version"
+      - "!src/version"
 
   workflow_dispatch:
 
