fix: fix typo in dependency list
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/armbian/config
+++ b/src/modules/armbian/config
@@ -1,4 +1,4 @@
 #!/bin/bash
 # shellcheck disable=all
 
-[ -n "$ARMBIAN_DEPS" ] || ARMBIAN_DEPS="armbian-config avahi-deamon iptables"
+[ -n "$ARMBIAN_DEPS" ] || ARMBIAN_DEPS="armbian-config avahi-daemon iptables"
