--- a/.github/workflows/BuildImages.yml
+++ b/.github/workflows/BuildImages.yml
@@ -56,6 +56,7 @@ jobs:
 
       - name: Copy output
         id: copy-image
+        if: always()
         shell: bash
         run: |
           source repository/src/config
@@ -65,6 +66,13 @@ jobs:
           cp repository/src/workspace/*.img $IMAGE.img
 
           echo "::set-output name=image::$IMAGE"
+
+      - name: Upload failed Logfile
+        if: failure()
+        uses: actions/upload-artifact@v3
+        with:
+          name: failed-${{ steps.copy-image.outputs.image }}.log
+          path: repository/src/workspace/build.log
 
       - name: Compressing Image
         shell: bash
