fix: set wrong source path
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/.github/workflows/BuildImages.yml
+++ b/.github/workflows/BuildImages.yml
@@ -72,7 +72,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: failed-${{ steps.copy-image.outputs.image }}.log
-          path: repository/src/workspace/build.log
+          path: repository/src/build.log
 
       - name: Compressing Image
         shell: bash
