chore: add bash-completion as dependency
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/armbian/config
+++ b/src/modules/armbian/config
@@ -1,4 +1,5 @@
 #!/bin/bash
 # shellcheck disable=all
 
-[ -n "$ARMBIAN_DEPS" ] || ARMBIAN_DEPS="armbian-config avahi-daemon iptables"
+[ -n "$ARMBIAN_DEPS" ] || ARMBIAN_DEPS="armbian-config avahi-daemon iptables \
+bash-completion"
