chore: update moonraker module
Update of moonraker module according to

https://github.com/Arksine/moonraker/issues/516

Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/moonraker/config
+++ b/src/modules/moonraker/config
@@ -1,2 +1,4 @@
+#!/usr/bin/env bash
+#Shebang for better file detection
 [ -n "$MOONRAKER_REPO_SHIP" ] || MOONRAKER_REPO_SHIP=https://github.com/Arksine/moonraker.git
 [ -n "$MOONRAKER_REPO_BRANCH" ] || MOONRAKER_REPO_BRANCH=master
