chore: update mainsail module to path changes
Includes update of mainsail.cfg
Which will be moved to external repo in the future

Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/mainsail/config
+++ b/src/modules/mainsail/config
@@ -1,2 +1,5 @@
+#!/usr/bin/env bash
+# Shebang for better file detection
+
 [ -n "$MAINSAIL_DEPS" ] || MAINSAIL_DEPS="nginx"
 [ -n "$MAINSAIL_URL" ] || MAINSAIL_URL=https://github.com/mainsail-crew/mainsail/releases/latest/download/mainsail.zip
