chore: refactor mainsailos module
refactor: improved shellcheck compatibilty

Also added some useful cli tools, namely:
exa - more colorful ls replacement
mc - tty file manager
tree - show file structure as a tree
bat - cat alternative with syntax highlighting and line numbers
btop - htop alternative with a better ui
nload - simple network bandwith usage viewer

Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/mainsailos/config
+++ b/src/modules/mainsailos/config
@@ -1,4 +1,5 @@
-#!/bin/bash
-# shellcheck disable=all
+#!/usr/bin/env bash
+# Shebang for better file detection
 
-[ -n "$MAINSAILOS_DEPS" ] || MAINSAILOS_DEPS="python3-serial"
+[ -n "$MAINSAILOS_DEPS" ] || MAINSAILOS_DEPS="python3-serial tree mc exa bat \
+nload btop"
