chore: improve piconfig for shellcheck compat
Improved shellcheck compatibility

Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/piconfig/config
+++ b/src/modules/piconfig/config
@@ -1,3 +1,6 @@
+#!/usr/bin/env bash
+# Shebang for better file detection
+
 [ -n "$PICONFIG_CONFIG_TXT_FILE" ] || PICONFIG_CONFIG_TXT_FILE="/boot/config.txt"
 [ -n "$PICONFIG_CMDLINE_TXT_FILE" ] || PICONFIG_CMDLINE_TXT_FILE="/boot/cmdline.txt"
 [ -n "$PICONFIG_CONFIG_BAK_FILE" ] || PICONFIG_CONFIG_BAK_FILE="/boot/orig-config.txt"
