chore: update sonar module to match new paths
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/sonar/config
+++ b/src/modules/sonar/config
@@ -1,4 +1,4 @@
-#!/bin/bash
+#!/usr/bin/env bash
 #### Sonar - A WiFi Keepalive daemon
 ####
 #### Written by Stephan Wendel aka KwadFan <me@stephanwe.de>
@@ -7,13 +7,12 @@
 ####
 #### This File is distributed under GPLv3
 ####
-# shellcheck disable=all
 
 # Sonar
 [ -n "$SONAR_REPO_SHIP" ] || SONAR_REPO_SHIP=https://github.com/mainsail-crew/sonar.git
 [ -n "$SONAR_REPO_BRANCH" ] || SONAR_REPO_BRANCH=main
 [ -n "$SONAR_DEPS" ] || SONAR_DEPS="git crudini iputils-ping"
-[ -n "$SONAR_DEFAULT_CONF_DIR" ] || SONAR_DEFAULT_CONF_DIR="/home/${BASE_USER}/klipper_config"
+[ -n "$SONAR_DEFAULT_CONF_DIR" ] || SONAR_DEFAULT_CONF_DIR="/home/${BASE_USER}/printer_data/config"
 [ -n "$SONAR_DEFAULT_CONF" ] || SONAR_DEFAULT_CONF="mainsail_default.conf"
 # Add Sonar to moonraker.conf (update_manager) bool (1:yes / 0:no)
 [ -n "$SONAR_ADD_SONAR_MOONRAKER" ] || SONAR_ADD_SONAR_MOONRAKER=1
