--- a/src/modules/sonar/config
+++ b/src/modules/sonar/config
@@ -1,4 +1,4 @@
-#!/usr/bin/env bash
+#!/bin/bash
 #### Sonar - A WiFi Keepalive daemon
 ####
 #### Written by Stephan Wendel aka KwadFan <me@stephanwe.de>
@@ -7,11 +7,13 @@
 ####
 #### This File is distributed under GPLv3
 ####
+# shellcheck disable=all
 
 # Sonar
 [ -n "$SONAR_REPO_SHIP" ] || SONAR_REPO_SHIP=https://github.com/mainsail-crew/sonar.git
 [ -n "$SONAR_REPO_BRANCH" ] || SONAR_REPO_BRANCH=main
 [ -n "$SONAR_DEPS" ] || SONAR_DEPS="git crudini iputils-ping"
+[ -n "$SONAR_PERSISTANT_LOG_PATH" ] || SONAR_PERSISTANT_LOG_PATH="/home/${BASE_USER}/printer_data/logs"
 [ -n "$SONAR_DEFAULT_CONF_DIR" ] || SONAR_DEFAULT_CONF_DIR="/home/${BASE_USER}/printer_data/config"
 [ -n "$SONAR_DEFAULT_CONF" ] || SONAR_DEFAULT_CONF="mainsail_default.conf"
 # Add Sonar to moonraker.conf (update_manager) bool (1:yes / 0:no)
