fix: fix missing klipper uds path
This fixes missing klipper uds path in moonraker.conf

Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/moonraker/filesystem/home/pi/printer_data/config/moonraker.conf
+++ b/src/modules/moonraker/filesystem/home/pi/printer_data/config/moonraker.conf
@@ -5,6 +5,8 @@ port: 7125
 enable_debug_logging: False
 # The maximum size allowed for a file upload (in MiB).  Default 1024 MiB
 max_upload_size: 1024
+# path to klipper UDS
+klippy_uds_address: ~/printer_data/klippy.sock
 
 [file_manager]
 config_path: ~/klipper_config
