--- a/src/modules/klipper/filesystem/root/etc/systemd/system/klipper.service
+++ b/src/modules/klipper/filesystem/root/etc/systemd/system/klipper.service
@@ -15,6 +15,6 @@ User=pi
 RemainAfterExit=yes
 WorkingDirectory=/home/pi/klipper
 EnvironmentFile=/home/pi/printer_data/systemd/klipper.env
-ExecStart=/home/pi/klippy-env/bin/python ${KLIPPER_ARGS}
+ExecStart=/home/pi/klippy-env/bin/python $KLIPPER_ARGS
 Restart=always
 RestartSec=10
