--- a/src/modules/crowsnest/config
+++ b/src/modules/crowsnest/config
@@ -10,7 +10,7 @@
 # shellcheck disable=all
 
 # crowsnest repo
-[[ -n "$CROWSNEST_REPO" ]] || CROWSNEST_REPO=https://github.com/mainsail-crew/crowsnest.git
+[[ -n "$CROWSNEST_REPO_SHIP" ]] || CROWSNEST_REPO_SHIP=https://github.com/mainsail-crew/crowsnest.git
 [[ -n "$CROWSNEST_REPO_BRANCH" ]] || CROWSNEST_REPO_BRANCH=ref/installer
 
 # crowsnest setup
