chore: update headers in mainsailos module
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/mainsailos/config
+++ b/src/modules/mainsailos/config
@@ -1,5 +1,13 @@
 #!/usr/bin/env bash
 # Shebang for better file detection
+#### mainsail module
+####
+#### Written by Stephan Wendel aka KwadFan <me@stephanwe.de>
+#### Copyright 2021 - 2022
+#### https://github.com/mainsail-crew/MainsailOS
+####
+#### This File is distributed under GPLv3
+####
 
 [ -n "$MAINSAILOS_DEPS" ] || MAINSAILOS_DEPS="python3-serial tree mc exa bat \
 nload btop"
