chore: fixed typo in mainsailos module
Signed-off-by: Stephan Wendel <me@stephanwe.de>

--- a/src/modules/mainsailos/config
+++ b/src/modules/mainsailos/config
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 # Shebang for better file detection
-#### mainsail module
+#### mainsailos module
 ####
 #### Written by Stephan Wendel aka KwadFan <me@stephanwe.de>
 #### Copyright 2021 - 2022
