--- a/src/modules/moonraker/filesystem/home/pi/printer_data/config/moonraker.conf
+++ b/src/modules/moonraker/filesystem/home/pi/printer_data/config/moonraker.conf
@@ -46,3 +46,10 @@ type: web
 channel: stable
 repo: mainsail-crew/mainsail
 path: ~/mainsail
+
+[update_manager mainsail-config]
+type: git_repo
+primary_branch: master
+path: ~/mainsail-config
+origin: https://github.com/mainsail-crew/mainsail-config.git
+managed_services: klipper
