--- a/src/modules/klipper/config
+++ b/src/modules/klipper/config
@@ -1,21 +1,31 @@
-#!/bin/bash
+#!/usr/bin/env bash
 # shellcheck disable=all
-[ -n "$KLIPPER_SRC_DIR" ] || KLIPPER_SRC_DIR=/home/${BASE_USER}/klipper
-[ -n "$KLIPPER_PYTHON_DIR" ] || KLIPPER_PYTHON_DIR=/home/${BASE_USER}/klippy-env
+#### klipper module
+####
+#### Based on work of:
+#### Raymond Himle and meteyou (Stefan Dej)
+####
+#### Written by Stephan Wendel aka KwadFan <me@stephanwe.de>
+#### Copyright 2021 - 2022
+#### https://github.com/mainsail-crew/MainsailOS
+####
+#### This File is distributed under GPLv3
+####
+#### Credits: Thanks to KevinOConnor for this great Firmware :)
 
-[ -n "$KLIPPER_REPO_SHIP" ] || KLIPPER_REPO_SHIP=https://github.com/Klipper3d/klipper.git
-[ -n "$KLIPPER_REPO_BRANCH" ] || KLIPPER_REPO_BRANCH=master
-[ -n "$KLIPPER_DEPS" ] || KLIPPER_DEPS="wget git gpiod \
-virtualenv python3-dev python3-matplotlib \
-libffi-dev build-essential \
-libncurses-dev libusb-dev \
-avrdude gcc-avr binutils-avr avr-libc \
-stm32flash dfu-util libnewlib-arm-none-eabi \
+[ -n "$KLIPPER_SRC_DIR" ] || KLIPPER_SRC_DIR="/home/${BASE_USER}/klipper"
+[ -n "$KLIPPER_PYTHON_DIR" ] || KLIPPER_PYTHON_DIR="/home/${BASE_USER}/klippy-env"
+
+[ -n "$KLIPPER_REPO_SHIP" ] || KLIPPER_REPO_SHIP="https://github.com/Klipper3d/klipper.git"
+[ -n "$KLIPPER_REPO_BRANCH" ] || KLIPPER_REPO_BRANCH="master"
+[ -n "$KLIPPER_DEPS" ] || KLIPPER_DEPS="git virtualenv python3-dev \
+python3-matplotlib libffi-dev build-essential libncurses-dev libusb-dev \
+avrdude gcc-avr binutils-avr avr-libc stm32flash dfu-util libnewlib-arm-none-eabi \
 gcc-arm-none-eabi binutils-arm-none-eabi libusb-1.0-0 libusb-1.0-0-dev"
 
-[ -n "$KLIPPER_USER_GROUPS" ] || KLIPPER_USER_GROUPS=tty,dialout
+[ -n "$KLIPPER_USER_GROUPS" ] || KLIPPER_USER_GROUPS="tty,dialout"
 
 [ -n "$KLIPPER_USER_DIRS" ] || KLIPPER_USER_DIRS="printer_data printer_data/config \
 printer_data/comms printer_data/logs"
 
-[ -n "$KLIPPER_PYENV_REQ" ] || KLIPPER_PYENV_REQ=scripts/klippy-requirements.txt
+[ -n "$KLIPPER_PYENV_REQ" ] || KLIPPER_PYENV_REQ="scripts/klippy-requirements.txt"
