--- a/src/modules/hotspot/config
+++ b/src/modules/hotspot/config
@@ -1,3 +1,3 @@
-[ -n "$HOTSPOT_NAME" ] || HOTSPOT_NAME=${DIST_NAME,,}
+[ -n "$HOTSPOT_NAME" ] || HOTSPOT_NAME=RatOS
 [ -n "$HOTSPOT_PASSWORD" ] || HOTSPOT_PASSWORD=raspberry
 [ -n "$HOTSPOT_CHANNEL" ] || HOTSPOT_CHANNEL=6
