--- a/site/package.json
+++ b/site/package.json
@@ -21,8 +21,8 @@
         "@mdx-js/react": "^1.6.21",
         "@svgr/webpack": "^5.5.0",
         "clsx": "^1.1.1",
+        "docusaurus-plugin-image-zoom": "^0.1.1",
         "file-loader": "^6.2.0",
-        "medium-zoom": "^1.0.6",
         "prism-react-renderer": "^1.2.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
